--- a/BroadcastDemo/app/src/main/AndroidManifest.xml
+++ b/BroadcastDemo/app/src/main/AndroidManifest.xml
@@ -3,10 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.rjdeleon.broadcastdemo">
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -20,13 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <receiver android:name=".ExampleBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGED"/>
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
